Fixed z-index bug when expanding site menu on small screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,7 @@ body {
     position: absolute;
     top: -8px;
     width: 66px;
+    z-index: 1;
 }
 
 .site-logo {
